mi segundo commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>algo largo</p>
     <a href="https://github.com/Kaal-I-Vayn">Cuenta de github</a>
     <img src="Imagenes/1209079.jpg" alt="">
+    <img src="Imagenes/1249480.jpg" alt="">
     
 </body>
 <footer>
