--- a/Semana 2/PaginaPrueba/index.html
+++ b/Semana 2/PaginaPrueba/index.html
@@ -13,8 +13,16 @@
         <div class="company">
             <h1 class="title">Scaffolding a New Company</h1>
             <p class="subtitle">
-                Join us with the lastest blockchain innovations
+                Join us with the lastest blockchain innovations                
             </p>                    
+            <p class="subtitle">
+                Join us with the lastest blockchain innovations                
+            </p>    
+            <p class="subtitle">
+                Join us with the lastest blockchain innovations                
+            </p>                        <p class="subtitle">
+                Join us with the lastest blockchain innovations                
+            </p>                        
         </div>
         <div class="more-info">
             <section class="icons-container">
