--- a/primer parcial/index.html
+++ b/primer parcial/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-        
+        <script src="index.js"></script>
 </body>
 
 </html>
